Update env constant

--- a/.env.sample
+++ b/.env.sample
@@ -18,9 +18,9 @@ RINGCENTRAL_EXTENSION=
 RINGCENTRAL_PASSWORD=
 
 # The phone number of the recipient
-RINGCENTRAL_RECIPIENT=
+RECIPIENT_PHONE_NUMBER=
 
-# The base URL for call API calls 
+# The base URL for call API calls
 # Sandbox
 RINGCENTRAL_SERVER_URL=https://platform.devtest.ringcentral.com
 # Production
